--- a/sidebar_component/sidebar_comp/frontend/package.json
+++ b/sidebar_component/sidebar_comp/frontend/package.json
@@ -8,13 +8,12 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "streamlit-component-lib": "^1.3.0",
-    "typescript": "^4.9.5"
+    "typescript": "~3.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +36,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "."
+  "homepage": ".",
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
+  }
 }
